fix(subscription): Improve subscription status notifications and data access (fix/minor-fix)
- Refined subscription status notifications with specific messages for
  ACTIVE, INACTIVE, EXPIRED, and CANCELLED states.
- Updated parking lot name retrieval logic in subscription service for
  accuracy in notifications.
- Simplified `checkWalletBalance` call by passing `session.getId()` directly.
- Modernized `setAllowedHeaders` in security config using `List.of`.
- Cleaned up enum definitions (`DurationType`, `ParkingLotStatus`) by
  removing trailing semicolons.
- Optimized `isAccountLocked` check, removing redundant `Boolean.TRUE.equals`.
```